--- a/style.css
+++ b/style.css
@@ -58,13 +58,17 @@
 	height:30px;
 }
 }*/
-iframe{
-	width:100%;
-	height:100vh;
-}
 #links a:active{
 	background:#3343ef;
 }
 .contbox{
 	display:none;
+}
+iframe{
+	display:block;
+	width:100%;
+	height:100vh;
+}
+#homecont{
+	display:block;
 }
