--- a/style.css
+++ b/style.css
@@ -1,7 +1,47 @@
 body{
-	margin:0;
-	padding:0;
+    margin:0;
+    padding:0;
 }
-#cv{
-	border:2px solid #000000;
+@media screen and (max-width:1024px){
+    #btn{
+        user-select:none;
+        position:fixed;
+        top:0;
+        font-size:30px;
+        transition:left 0.5s, transform 0.5s;
+    }
+    #nav{
+        position:fixed;
+        top:0;
+        right:0;
+        height:100%;
+        width:0;
+        transition:width 0.5s;
+        overflow:hidden;
+        background:#444444;
+        color:#ffffff;
+    }
+    #nav a{
+        user-select:none;
+        display:block;
+        font-family:Arial;
+        padding:0 0 20px;
+        text-align:center;
+    }
+    #nav a:active{
+        background-color:#446699;
+    }
+}
+@media screen and (min-width:1024px){
+    #btn{
+        display:none;
+    }
+}
+footer{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    background:#333333;
+    color:#fff;
+    border:8px solid #ff0000;
 }
