--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     #nav{
         position:fixed;
         top:0;
-        right:0;
+        left:0;
         height:100%;
         width:0;
         transition:width 0.5s;
